Updated PORT value

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=5000
+PORT=process.env.PORT || 5000
 FOREIGN_DATABASE=http://qa-interview-test.qa.splytech.io/api/drivers
 FRONTEND_URL=https://taxi-vg.herokuapp.com/
 LATITUDE=51.5049375
